# 2026-live-signature-wall

./: .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  app.py  build_windows.bat  pyproject.toml
.github/workflows/: windows-build.yml
signature_wall/: __init__.py  main.py  models.py  realtime.py  storage.py
signature_wall/static/: admin.css  admin.js  screen.css  screen.js  sign.css  sign.js
signature_wall/templates/: admin.html  screen.html  sign.html
tests/: test_app.py
